--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,1 +1,27 @@
+name: IPLogin
+version: 1.0.0
+main: com.example.iplogin.IPLogin
+api-version: 1.20
+author: YourName
+description: Login/Register plugin with IP lock
+
+commands:
+  register:
+    description: Register a new account
+    usage: /register <password>
+  login:
+    description: Login to your account
+    usage: /login <password>
+  changepass:
+    description: Change your password
+    usage: /changepass <oldpass> <newpass>
+  ipdel:
+    description: Delete IP binding (admin only)
+    usage: /ipdel <player>
+    permission: iplogin.admin
+
+permissions:
+  iplogin.admin:
+    description: Admin permissions
+    default: op
 
